Correctly unpack jnidispatch from resources
Signed-off-by: Dario Valdespino <dvaldespino00@gmail.com>